--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
@@ -52,5 +53,5 @@
   },
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.6.0"
-  }
+  },"proxy":"http://localhost:8800/api"
 }
