--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select-search": "^3.0.10",
     "react-simple-image-slider": "^2.4.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
